--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -37,6 +37,15 @@ body {
 	}
 }
 
+canvas {
+	display: block;
+}
+
+#container {
+	width: 100vw;
+	height: 100vh;
+}
+
 .preloader {
 	position: fixed;
 	top: 0;
@@ -71,7 +80,7 @@ body {
 .base {
 	width: 100%;
 	position: relative;
-	padding: var(--height-header) 0 0;
+	// padding: var(--height-header) 0 0;
 
 	flex: 1 0 auto;
 }
